--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.linkedin.camus</groupId>
 	<artifactId>camus-parent</artifactId>
-	<version>0.1.0-SNAPSHOT-linqia-1</version>
+	<version>0.1.0-SNAPSHOT-linqia-2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Camus Parent</name>
 	<description>
@@ -26,22 +26,22 @@
 			<dependency>
 				<groupId>com.linkedin.camus</groupId>
 				<artifactId>camus-api</artifactId>
-				<version>0.1.0-SNAPSHOT-linqia-1</version>
+				<version>0.1.0-SNAPSHOT-linqia-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.linkedin.camus</groupId>
 				<artifactId>camus-etl-kafka</artifactId>
-				<version>0.1.0-SNAPSHOT-linqia-1</version>
+				<version>0.1.0-SNAPSHOT-linqia-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.linkedin.camus</groupId>
 				<artifactId>camus-schema-registry</artifactId>
-				<version>0.1.0-SNAPSHOT-linqia-1</version>
+				<version>0.1.0-SNAPSHOT-linqia-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.linkedin.camus</groupId>
 				<artifactId>camus-schema-registry</artifactId>
-				<version>0.1.0-SNAPSHOT-linqia-1</version>
+				<version>0.1.0-SNAPSHOT-linqia-2-SNAPSHOT</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
