--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -18,6 +18,14 @@ etl.execution.history.path=
 # Concrete implementation of the Decoder class to use
 camus.message.decoder.class=com.linkedin.batch.etl.kafka.coders.LatestSchemaKafkaAvroMessageDecoder
 
+# Another option for decoder class if Kafka messages are all JSON
+#camus.message.decoder.class=com.linkedin.camus.etl.kafka.coders.JsonStringMessageDecoder
+# When dealing with json messages, set the field name that has a timestamp
+#camus.message.timestamp.field=time
+# What format is the timestamp in? This will be passed directly into SimpleDateFormat, or set to "ISO-8601" to parse that format
+#camus.message.timestamp.format=yyyy-MM-dd_HH:mm:ss
+#camus.message.timestamp.format=ISO-8601
+
 # Used by avro-based Decoders to use as their Schema Registry
 kafka.message.coder.schema.registry.class=com.linkedin.camus.example.DummySchemaRegistry
 
