--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -90,7 +90,10 @@ etl.output.codec=deflate
 etl.deflate.level=6
 #etl.output.codec=snappy
 
+# This is value is fed into org.joda.time.DateTimeZone.forId(String)
+#etl.default.timezone=UTC
 etl.default.timezone=America/Los_Angeles
+
 etl.output.file.time.partition.mins=60
 etl.keep.count.files=false
 etl.execution.history.max.of.quota=.8
