Add etl.output.path.granularity property
Add a property that DefaultPartitioner will use when creating the output folders that allows for hourly, daily, or monthly folder structures

--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -90,9 +90,12 @@ etl.output.codec=deflate
 etl.deflate.level=6
 #etl.output.codec=snappy
 
-# This is value is fed into org.joda.time.DateTimeZone.forId(String)
+# When creating output folders, set the timezone to use, and granularity
+# Timezone value is fed into org.joda.time.DateTimeZone.forId(String)
 #etl.default.timezone=UTC
 etl.default.timezone=America/Los_Angeles
+# Granularity can be: hourly, daily, monthly
+etl.output.path.granularity=hourly
 
 etl.output.file.time.partition.mins=60
 etl.keep.count.files=false
