Adding comments to properties file

--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -96,8 +96,9 @@ etl.deflate.level=6
 etl.default.timezone=America/Los_Angeles
 # Granularity can be: hourly, daily, monthly
 etl.output.path.granularity=hourly
-
+# Within those folders, set the granularity of the files
 etl.output.file.time.partition.mins=60
+
 etl.keep.count.files=false
 etl.execution.history.max.of.quota=.8
 
