--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -116,7 +116,15 @@ etl.output.codec=deflate
 etl.deflate.level=6
 #etl.output.codec=snappy
 
+# When creating output folders, set the timezone to use, and granularity
+# Timezone value is fed into org.joda.time.DateTimeZone.forId(String)
+#etl.default.timezone=UTC
 etl.default.timezone=America/Los_Angeles
+# Granularity can be: hourly, daily, monthly
+etl.output.path.granularity=hourly
+# Within those folders, set the granularity of the files
+etl.output.file.time.partition.mins=60
+
 etl.output.file.time.partition.mins=60
 etl.keep.count.files=false
 etl.execution.history.max.of.quota=.8
