--- a/camus-example/pom.xml
+++ b/camus-example/pom.xml
@@ -32,6 +32,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
