--- a/camus-sweeper/pom.xml
+++ b/camus-sweeper/pom.xml
@@ -4,12 +4,12 @@
 	<groupId>com.linkedin.camus</groupId>
 	<artifactId>camus-sweeper</artifactId>
 	<name>Camus compaction code small files produced Camus</name>
-	<version>0.1.0-SNAPSHOT-linqia-3</version>
+	<version>0.1.0-SNAPSHOT-linqia-4-SNAPSHOT</version>
 	
 	<parent>
 		<groupId>com.linkedin.camus</groupId>
 		<artifactId>camus-parent</artifactId>
-		<version>0.1.0-SNAPSHOT-linqia-3</version>
+		<version>0.1.0-SNAPSHOT-linqia-4-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
